@@ -62,7 +62,7 @@ namespace MySql.Data.VisualStudio
         return table.HasChanges();
       }
     }
-    
+
     internal bool TextValueChanged { get; set; }
 
     #endregion
@@ -86,7 +86,6 @@ namespace MySql.Data.VisualStudio
         if (DialogResult.Cancel == dlg.ShowDialog()) return false;
         table.Name = dlg.TableName;
       }
-      
       table.OwningNode.TextValueChanged = false;
       return base.Save();
     }
@@ -115,6 +114,7 @@ namespace MySql.Data.VisualStudio
 
         HierarchyAccessor.Connection.UnlockProviderObject();
       }
+      OnDataLoaded();
     }
 
     public override string GetSaveSql()
